--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
     <title>Slider</title>
 </head>
 <body>
-    <div class="slider">
-        <div class="slider-controls">
-            <button class="slider-btn slider__prev">prev</button>
-            <button class="slider-btn slider__next">next</button>
-        </div>
-        <div class="slider-wrap">
-            <ul>
-            </ul>
-        </div>
+  <div class="slider-container">
+    <div id="slide-number" class="slide-number"></div>
+    <img class="" src="https://picsum.photos/500/500" alt="">
+    <img class="" src="https://picsum.photos/600/600" alt="">
+    <img class="" src="https://picsum.photos/700/700" alt="">
+</div>
+<div class="slider-control">
+    <button id="btn-left" class="btn">Previous</button>
+    <div class="indecators" id="indecators">
     </div>
-</body>
+    <button id="btn-right" class="btn">Next</button>
+</div>
+    </body>
 </html>
